--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,11 +36,13 @@ dist.jlink.output=${dist.jlink.dir}/modulacionAM
 endorsed.classpath=
 excludes=
 file.reference.modulacionAM-lib=lib
+file.reference.SLabs.jar=lib\\SLabs.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.modulacionAM-lib}
+    ${file.reference.modulacionAM-lib}:\
+    ${file.reference.SLabs.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
